Some lecture 2 progress

--- a/02_201+Calc/201+Calc.html
+++ b/02_201+Calc/201+Calc.html
@@ -28,6 +28,282 @@ class: center, middle, inverse, title-slide
 
 
 
+
+# Getting on the Same Page
+
+.bigger[
+
+## Stuff I Hope You Recognize
+
+
+- Supply and Demand 
+
+- Types of Market Failure
+
+- Types of Goods
+
+&lt;br&gt;
+
+## Stuff You May Not Recognize
+
+- Maximizing a One-Variable Function (Derivatives)
+
+]
+
+---
+
+# Terminology
+
+**Market**: a decentralized collection of all actual and potential buyers and sellers of a good whose interactions determine the allocation and price through exchange
+
+&lt;br&gt;
+
+**Demand Curve**: A schedule or graph showing the quantity of a good buyers wish to buy at a given price. Inversely, the marginal willingness to pay or marginal benefit for each good purchased
+
+&lt;br&gt;
+
+**Supply Curve**: A schedule or graph showing the quantity of a good producers wish to produce at a given price. Inversely, the marginal willingness to accept or marginal cost for each good produced
+
+---
+
+# Market Demand
+
+.pull-left[
+&lt;img src="201+Calc_files/figure-html/unnamed-chunk-1-1.png" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+Market demand is the sum, or aggregate of all individual demand curves
+]
+
+---
+count:false
+# Market Demand
+
+.pull-left[
+&lt;img src="201+Calc_files/figure-html/unnamed-chunk-2-1.png" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+Market demand is the sum, or aggregate of all individual demand curves
+
+Horizontal Interpretation: How many total goods do consumers want to buy at a given price
+]
+
+---
+count:false
+# Market Demand
+
+.pull-left[
+&lt;img src="201+Calc_files/figure-html/unnamed-chunk-3-1.png" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+Market demand is the sum, or aggregate of all individual demand curves
+
+Horizontal Interpretation: How many total goods consumers want to buy at a given price
+
+&lt;br&gt;
+
+Vertical Interpretation: The marginal benefit to consumers derived from owning the good
+
+]
+
+---
+# Law of Demand
+
+Demand curves slope downwards. Why?
+
+--
+&lt;br&gt;
+
+Law of Demand:
+
+As the price of a good increases, people prefer less of the good, all else equal
+
+--
+
+&lt;br&gt;
+
+Two sources:
+
+Substitution Effect: As the price increases, other, similar goods become more attractive
+
+--
+
+Income Effect: As the price increases, less of the good can be purchased with the same amount of money
+
+---
+
+# Market Supply
+
+.pull-left[
+&lt;img src="201+Calc_files/figure-html/unnamed-chunk-4-1.png" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+Market supply is the sum, or aggregate of all individual supply curves
+
+
+]
+---
+count:false
+# Market Supply
+
+.pull-left[
+&lt;img src="201+Calc_files/figure-html/unnamed-chunk-5-1.png" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+Market supply is the sum, or aggregate of all individual supply curves
+
+Horizontal Interpretation: How many total goods producers are willing to sell at a given price
+
+&lt;br&gt;
+
+
+
+]
+
+---
+count:false
+# Market Supply
+
+.pull-left[
+&lt;img src="201+Calc_files/figure-html/unnamed-chunk-6-1.png" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+Market supply is the sum, or aggregate of all individual supply curves
+
+Horizontal Interpretation: How many total goods producers are willing to sell at a given price
+
+&lt;br&gt;
+
+Vertical Interpretation: The marginal cost to producers derived from producing the good
+
+]
+
+---
+
+# Law of Supply
+
+Supply curves slope upwards. Why?
+
+&lt;br&gt;
+
+--
+
+Law of Supply: As the price of a good increases, the more producers are willing to supply, all else equal
+
+&lt;br&gt;
+
+--
+
+Production is costly. Producers choose the lowest cost production options first. To produce more, they need to be compensated with a higher price.
+
+---
+
+# Market Equilibrium
+
+.pull-left[
+&lt;img src="201+Calc_files/figure-html/unnamed-chunk-7-1.png" style="display: block; margin: auto;" /&gt;
+
+]
+
+.pull-right[
+Market equilibrium is a price, quantity pair where the demand curve intersects the supply curve
+
+&lt;br&gt;
+
+This means at this price, quantity supplied = quantity demanded
+
+&lt;br&gt;
+
+There is no surplus or shortage of goods: Producers supply as much as they want to and consumers purchase as much as they want to
+
+]
+
+---
+# Benefits of Exchange
+
+.bigger[
+
+Markets exist, in theory, to allow both sides to benefit from the exchange
+
+&lt;br&gt;
+
+Both sides have something that the other values: Consumers value the good, Producers value currency that can be spent on other goods
+
+&lt;br&gt;
+
+Nearly all consumers who purchase a good would have been willing to pay more
+
+&lt;br&gt;
+
+For nearly all goods sold, the producer would have been willing to part with it for less
+]
+
+---
+
+# Consumer Surplus
+
+The demand curve tells us the marginal willingness to pay, or marginal benefit from consuming a good
+
+&lt;br&gt;
+
+Consumer Surplus: Benefit consumers derive beyond the price of the good (Marginal Benefit - Price)
+
+&lt;br&gt;
+
+If Consumer Surplus is positive, it means the consumer would benefit from purchasing the good
+
+&lt;br&gt;
+
+The Optimal Purchase Rule tells us that consumers should purchase until (Marginal Benefit - Price) = 0
+
+&lt;br&gt;
+
+By adding up Consumer Surplus for each good sold, we can numerically represent the benefit to consumers in the market
+
+---
+
+# Producer Surplus
+
+The supply curve tells us the marginal willingness to accept, or the marginal cost of producing a good
+
+&lt;br&gt;
+
+The area under the supply curve corresponds to the cost of production
+
+&lt;br&gt; 
+
+The area under the price line gives us total revenue - a rectangle equal to (Price*Quantity)
+
+&lt;br&gt;
+
+Producer Surplus: Benefit producers derive above marginal cost from selling a good (Price - Marginal Cost)
+
+Or, the difference between revenue earned and the cost of production
+
+---
+# Market Equilibrium
+
+.pull-left[
+&lt;img src="201+Calc_files/figure-html/unnamed-chunk-8-1.png" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+.pink[**Consumer Surplus**]: Difference between willingness to pay (demand) and price
+
+&lt;br&gt;
+
+.purple[**Producer Surplus**]: Difference between price and marginal cost(supply)
+
+&lt;br&gt;
+
+.blue[**Total Surplus**]: sum of CS and PS (and government revenue when applicable)
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
